# copra

./: .gitignore  .travis.yml  Cargo.toml  LICENSE-MIT  README.md  install_protoc.sh
caper/: Cargo.toml  build.rs
caper-compiler/: Cargo.toml
caper-examples/: Cargo.toml  build.rs
caper-examples/src/: lib.rs
caper-examples/src/protos/: benchmark.proto  benchmark.rs  benchmark_caper.rs  demo.proto  demo_caper.rs  echo.proto  echo.rs  echo_caper.rs  http_hello.proto  http_hello_caper.rs  mod.rs
caper/examples/echo/: main.rs
caper/src/: channel.rs  codec.rs  controller.rs  dispatcher.rs  lib.rs  monitor.rs  protocol.rs  server.rs  service.rs  stub.rs
caper/src/channel/: backend.rs  connector.rs  mod.rs  transport.rs
caper/src/load_balancer/: mod.rs  single_server.rs
caper/src/message/: mod.rs  test.proto
caper/src/protocol/: brpc.rs  http.rs  mod.rs
caper/src/server/: connection.rs  mod.rs  protocol.rs
copra/: Cargo.toml
copra-compile/: Cargo.toml
copra-compile/src/: main.rs
copra-examples/: Cargo.toml  build.rs
copra-examples/src/: lib.rs
copra-examples/src/protos/: benchmark_copra.rs  demo.rs  demo_copra.rs  echo.rs  echo_copra.rs  http_hello.rs  http_hello_copra.rs  mod.rs
copra/src/: dispatcher.rs  lib.rs  monitor.rs  service.rs  stub.rs
copra/src/channel/: connector.rs  mod.rs
copra/src/channel/layer/: mod.rs
copra/src/channel/layer/http2/: codec.rs  mod.rs
copra/src/load_balancer/: mod.rs  single_server.rs
copra/src/message/: meta.rs  test.rs
copra/src/protocol/: brpc.rs  http.rs  mod.rs
copra/src/server/: connection.rs  mod.rs
copra/src/service/: error.rs  mod.rs
copra/tests/: lib.rs
copra/tests/channel_tests/: mod.rs
copra/tests/mock/: mod.rs
copra/tests/protos/: simple.proto
examples/echo/: main.rs  message.rs  proto.rs
protoc-rust-caper/: Cargo.toml
protoc-rust-caper/src/: codegen.rs  lib.rs
protoc-rust-caper/src/codegen/: mod.rs  name.rs  provider.rs  stub.rs
protoc-rust-copra/: Cargo.toml
protoc-rust-copra/src/: lib.rs
protoc-rust-copra/src/codegen/: mod.rs  name.rs  provider.rs  stub.rs
src/: channel.rs  codec.rs  dispatcher.rs  lib.rs  protocol.rs  server.rs  service.rs  stub.rs
src/message/: meta.proto  meta.rs
