[package]
name = "caper-examples"
version = "0.0.0"
authors = ["AprliRainkun <zmy.2347@sjtu.edu.cn>"]

[dependencies]
caper = { path = "../caper" }
env_logger = "0.4"
futures = "0.1"
protobuf = "1.4"
tokio-io = "0.1"
tokio-core = "0.1"
tokio-proto = "0.1"
tokio-service = "0.1"

[build-dependencies]
protoc-rust-caper = { path = "../protoc-rust-caper" }

[lib]
doctest = false
test = false

[[bin]]
name = "echo"