[package]
name = "caper-examples"
version = "0.0.0"
authors = ["AprliRainkun <zmy.2347@sjtu.edu.cn>"]

#TODO: seperate dependencies for each binary
[dependencies]
caper = { path = "../caper" }
env_logger = "0.4"
futures = "0.1"
futures-cpupool = "0.1"
protobuf = "1.4"
primal = "0.2"
rand = "0.4"
tokio-io = "0.1"
tokio-core = "0.1"
tokio-timer = "0.1"

[build-dependencies]
protoc-rust-caper = { path = "../protoc-rust-caper" }

[lib]
doctest = false
test = false

[[bin]]
name = "echo"

[[bin]]
name = "http-hello"
path = "src/bin/http_hello.rs"

[[bin]]
name = "benchmark"

[[bin]]
name = "demo"
