[package]
name = "copra-examples"
version = "0.0.0"
authors = ["Mingyu Zhou <zmy.2347@sjtu.edu.cn>"]

#TODO: seperate dependencies for each binary
[dependencies]
copra = { path = "../copra" }
env_logger = "0.4"
futures = "0.1"
futures-cpupool = "0.1"
protobuf = "1.4"
primal = "0.2"
rand = "0.4"
tokio-io = "0.1"
tokio-core = "0.1"
tokio-timer = "0.1"

[build-dependencies]
protoc-rust-copra = { path = "../protoc-rust-copra" }

[lib]
doctest = false
test = false

[[bin]]
name = "echo"

[[bin]]
name = "http-hello"
path = "src/bin/http_hello.rs"

[[bin]]
name = "benchmark"

[[bin]]
name = "demo"
